<resources>
    <string name="app_name">Bank Sampah</string>
    <string name="kalkulator">KALKULATOR</string>
    <string name="TandaPlus">plus</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="prompt_kategori_sampah">Kategori Sampah</string>
    <string name="prompt_sub_kategori_sampah">Sub-Kategori Sampah</string>
    <string name="tanggal_akhir">Tanggal Akhir</string>
    <string name="tanggal_awal">Tanggal Awal</string>
    <string name="cari">cari</string>
    <string name="hapus_filter">hapus filter</string>
    <string name="simpan_laporan">simpan laporan</string>
    <string name="total_transaksi">Total Transaksi</string>
    <string name="total_jumlah">Total Jumlah</string>
    <string name="rp_0">Rp 0</string>
    <string name="date">date</string>
    <string name="menu">menu</string>
    <string name="logo">logo</string>
    <string name="default_web_client_id" />
    <string name="kategori">kategori</string>
    <string name="dropdown_description">dropdown</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="periode_array">
        <item>1 Bulan</item>
        <item>6 Bulan</item>
        <item>1 Tahun</item>
    </string-array>
    <string-array name="satuan_array">
        <item>Kg</item>
        <item>Gram</item>
        <item>Liter</item>
        <!-- tambahkan item-item lainnya sesuai kebutuhan -->
    </string-array>
</resources>