<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".laporansubkategorii">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="23dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/tgl_awal"
                    android:layout_width="140dp"
                    android:layout_height="50dp"
                    android:text="@string/tanggal_awal"
                    android:layout_marginEnd="80dp"
                    android:textSize="18sp"
                    android:autofillHints="name"
                    android:inputType="date"
                    android:labelFor="@id/tgl_awal"
                    android:fontFamily="@font/ralewaysemibold"/>

                <EditText
                    android:id="@+id/tgl_akhir"
                    android:layout_width="140dp"
                    android:layout_height="50dp"
                    android:text="@string/tanggal_akhir"
                    android:textSize="18sp"
                    android:autofillHints="name"
                    android:inputType="date"
                    android:hint="@string/tanggal_akhir"
                    android:labelFor="@id/tgl_akhir"
                    android:fontFamily="@font/ralewaysemibold"/>

            </LinearLayout>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="14dp"
                android:columnCount="2"
                >

                <Button
                    android:layout_width="160dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="45dp"
                    android:background="@drawable/laporanbutton"
                    android:text="@string/cari"
                    android:textColor="@color/white"
                    android:fontFamily="@font/ralewaysemibold"/>

                <Button
                    android:layout_width="160dp"
                    android:layout_height="50dp"
                    android:background="@drawable/laporanbutton"
                    android:text="@string/hapus_filter"
                    android:textColor="@color/white"
                    android:fontFamily="@font/ralewaysemibold"/>
            </GridLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/laporanbutton"
                android:text="@string/simpan_laporan"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:fontFamily="@font/ralewaysemibold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:src="@drawable/dateicons"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="0dp"
                    android:contentDescription="@string/date"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_transaksi"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/ralewaysemibold"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_jumlah"
                        android:textSize="16sp"
                        android:textColor="@color/dasar"
                        android:textStyle="bold"
                        android:layout_marginStart="0dp"
                        android:layout_marginEnd="210dp"
                        android:fontFamily="@font/ralewaysemibold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rp_0"
                        android:textColor="#2BA84A"
                        android:fontFamily="@font/ralewaysemibold"/>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginVertical="10dp"
                    android:background="@drawable/line"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="210dp"
                        android:fontFamily="@font/ralewaysemibold"
                        android:text="Data Transaksi"
                        android:textColor="@color/teks"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</FrameLayout>