<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".laporanKategori">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="23dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tgl_awal"
                    android:layout_width="140dp"
                    android:layout_height="50dp"
                    android:autofillHints="name"
                    android:background="@drawable/linehijau"
                    android:fontFamily="@font/robotomedium"
                    android:gravity="center"
                    android:labelFor="@id/tgl_awal"
                    android:hint="@string/tanggal_awal"
                    android:textSize="18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/tgl_akhir"
                    android:layout_width="140dp"
                    android:layout_height="50dp"
                    android:autofillHints="name"
                    android:background="@drawable/linehijau"
                    android:fontFamily="@font/robotomedium"
                    android:gravity="center"
                    android:hint="@string/tanggal_akhir"
                    android:labelFor="@id/tgl_akhir"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="14dp">

                <Button
                    android:layout_width="160dp"
                    android:layout_height="50dp"
                    android:background="@drawable/laporanbutton"
                    android:textSize="14sp"
                    android:text="@string/cari"
                    android:textColor="@color/white"
                    android:fontFamily="@font/ralewaysemibold"/>

                <View android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/hapus"
                    android:layout_width="160dp"
                    android:layout_height="50dp"
                    android:background="@drawable/laporanbutton"
                    android:textSize="14sp"
                    android:text="@string/hapus_filter"
                    android:textColor="@color/white"
                    android:fontFamily="@font/ralewaysemibold"/>
            </LinearLayout>


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/laporanbutton"
                android:fontFamily="@font/ralewaysemibold"
                android:text="@string/simpan_laporan"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="8dp"
                    android:contentDescription="@string/date"
                    android:src="@drawable/dateicons" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ralewaysemibold"
                    android:text="@string/total_transaksi"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="0dp"
                        android:layout_marginEnd="210dp"
                        android:fontFamily="@font/ralewaysemibold"
                        android:text="@string/total_jumlah"
                        android:textColor="@color/dasar"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ralewaysemibold"
                        android:text="@string/rp_0"
                        android:textColor="#2BA84A" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginVertical="10dp"
                    android:background="@drawable/line"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="210dp"
                        android:fontFamily="@font/ralewaysemibold"
                        android:text="Data Transaksi"
                        android:textColor="@color/teks"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</FrameLayout>